--- a/MRAPI/src/main/resources/application.properties
+++ b/MRAPI/src/main/resources/application.properties
@@ -6,6 +6,6 @@
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 #Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= update
- server.port = 9090
+ server.port = ${PORT:5000}
  logging.level.web=debug
  logging.level.root=debug
