--- a/MRAPI/src/main/resources/application.properties
+++ b/MRAPI/src/main/resources/application.properties
@@ -9,3 +9,5 @@
  server.port = ${PORT:5000}
  logging.level.web=debug
  logging.level.root=debug
+app.firebase-config=firebase-service-account.json
+app.firebase-config-guess=firebase-service-account-for-guess.json
