--- a/MRAPI/pom.xml
+++ b/MRAPI/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>json</artifactId>
 			<version>20220320</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>6.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
